--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -4,4 +4,9 @@
   <a href="/blog/">Blog</a>
   <h1>Mi blog de Astro aprendizaje</h1>
   <p>Aquí es donde publicaré sobre mi viaje de aprendizaje Astro.</p>
+  <ul>
+    <li><a href="/posts/post-1/">Publicación 1</a></li>
+    <li><a href="/posts/post-2/">Publicación 2</a></li>
+    <li><a href="/posts/post-3/">Publicación 3</a></li>
+  </ul>
 </body>
