--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,8 +1,20 @@
+---
+import "../styles/global.css";
+
+const pageTitle = "Blog de aprendizaje";
+---
+<html lang="es">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>{pageTitle}</title>
+  </head>
+
 <body>
   <a href="/">Inicio</a>
   <a href="/about/">Sobre mi</a>
   <a href="/blog/">Blog</a>
-  <h1>Mi blog de Astro aprendizaje</h1>
+  <h1>{pageTitle}</h1>
   <p>Aquí es donde publicaré sobre mi viaje de aprendizaje Astro.</p>
   <ul>
     <li><a href="/posts/post-1/">Publicación 1</a></li>
