--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,7 @@
 ---
 import "../styles/global.css";
-
+import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
 const pageTitle = "About me";
 const identity = {
   firstName: "Sarah",
@@ -38,9 +39,7 @@ const textCase = "Uppercase"
     </style>
   </head>
   <body>
-    <a href="/">Inicio</a>
-    <a href="/about/">Sobre mi</a>
-    <a href="/blog/">Blog</a>
+    <Navigation/>
     <h1>{pageTitle}</h1>
     <h2>... ¡y mi nuevo sitio Astro!</h2>
 
@@ -64,5 +63,6 @@ const textCase = "Uppercase"
     {finished && <p>¡He terminado este tutorial!</p>}
 
     {goal === 3 ? <p>Mi objetivo es terminar en 3 días.</p> : <p>Mi objetivo no son 3 días.</p>}
+	<Footer/>
   </body>
 </html>
