--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,7 @@
 ---
 import "../styles/global.css";
-
+import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
 const pageTitle = "Blog de aprendizaje";
 ---
 <html lang="es">
@@ -11,9 +12,7 @@ const pageTitle = "Blog de aprendizaje";
   </head>
 
 <body>
-  <a href="/">Inicio</a>
-  <a href="/about/">Sobre mi</a>
-  <a href="/blog/">Blog</a>
+  <Navigation />
   <h1>{pageTitle}</h1>
   <p>Aquí es donde publicaré sobre mi viaje de aprendizaje Astro.</p>
   <ul>
@@ -21,4 +20,5 @@ const pageTitle = "Blog de aprendizaje";
     <li><a href="/posts/post-2/">Publicación 2</a></li>
     <li><a href="/posts/post-3/">Publicación 3</a></li>
   </ul>
+	<Footer/>
 </body>
